@@ -50,4 +50,6 @@ released tarballs, you'll need to run `autogen.sh' before running
 'configure' for the first time.
 
 Philip Kendall <philip-fuse@shadowmagic.org.uk>
-18 December 2007
+5 January 2008
+
+$Id$
