@@ -63,6 +63,7 @@ CVS tags for libspectrum
 |
 +-\
 | | libspectrum_0_4_0pre1
+| | libspectrum_0_4_0
 | |
 | | libspectrum_0_4_0-branch
 |
